# fastapi_churn

./: .dockerignore  .gitignore  Dockerfile  README.md  dataset.py  main.py  model.py  preprocessing.py  pyproject.toml  schemas.py  test.json
app/: main.py
app/api/routes/: dataset.py  health.py  model.py  predict.py
app/core/: exceptions.py  paths.py
app/schemas/: __init__.py  churn.py
app/services/: dataset.py  history.py  model.py  preprocessing.py
data/: churn_dataset.csv
tests/: conftest.py  test_api.py  test_dataset.py  test_model.py  test_preprocessing.py
