[project]
name = "assignment-fastapi"
version = "0.1.0"
description = "REST API для обучения модели оттока клиентов (churn) и batch-предсказаний"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
